ADD 渲染技能树到canvas上的功能 ADD 按钮控制显示编辑和添加操作框 ADD 删除skill功能

--- a/wechat-mini-program/SkillSet/package.json
+++ b/wechat-mini-program/SkillSet/package.json
@@ -17,6 +17,8 @@
   "author": "assmdx <assmdx183@163.com>",
   "license": "MIT",
   "dependencies": {
+    "kity": "^2.0.4",
+    "kityminder-core": "^1.4.50",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-promise": "^0.5.3",
