ADD assmdx.json SQLite UPDATE 动态设置canvas的高度 UPDATE 改变树节点的位置定位方法 为 类似文件目录结构

--- a/wechat-mini-program/SkillSet/project.config.json
+++ b/wechat-mini-program/SkillSet/project.config.json
@@ -8,6 +8,6 @@
   },
   "compileType": "miniprogram",
   "appid": "touristappid",
-  "projectname": "skillset",
+  "projectname": "MySkills",
   "miniprogramRoot": "./dist"
 }
