--- a/wechat-mini-program/SkillSet/package.json
+++ b/wechat-mini-program/SkillSet/package.json
@@ -17,6 +17,7 @@
   "author": "assmdx <assmdx183@163.com>",
   "license": "MIT",
   "dependencies": {
+    "d3-flextree": "^2.1.1",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.7",
     "wepy-plugin-imagemin": "^1.5.3"
@@ -35,8 +36,9 @@
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
+    "less": "^3.11.3",
     "wepy-compiler-babel": "^1.5.1",
-    "wepy-compiler-less": "^1.3.10",
+    "wepy-compiler-less": "^1.3.14",
     "wepy-eslint": "^1.5.3",
     "wepy-plugin-uglifyjs": "^1.3.7"
   }
