feat: 🎸 树的绘制改为使用d3-flextree

--- a/wechat-mini-program/SkillSet/package.json
+++ b/wechat-mini-program/SkillSet/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "d3-flextree": "^2.1.1",
+    "lodash.clonedeep": "^4.5.0",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.7",
     "wepy-plugin-imagemin": "^1.5.3"
